Fixed browsing experience on Safari and mobile

--- a/src/pages/PortfolioPage/style.scss
+++ b/src/pages/PortfolioPage/style.scss
@@ -21,7 +21,6 @@
 
   .content-grid {
     display: grid;
-    flex: auto;
   }
 
   .portfolio-wrapper {
